# wyd

./: .gitignore  Cargo.toml  README.md  \  db.json  db.sql  features.md  log.json  log.txt  main.rs  projects.db  request.rs  schema.sql  viewer.rs
src/: event.rs  handler.rs  initialize.rs  lib.rs  main.rs  projects.db  request.rs  schema.sql  tui.rs  viewer.rs
src/_old/: _handler.rs
src/_old/sql/: gitconfig.rs  tmp_config.rs  todo.rs
src/_old/v1/: code.rs  mod.rs
src/_old/v1.1./: main.rs
src/_old/v1.1./app/: state.rs  ui.rs
src/_old/v1.1./app/structs/: mod.rs
src/_old/v1.1./inputs/: events.rs  mod.rs
src/_old/v1.1./io/: handler.rs  mod.rs
src/app/: actions.rs  config.rs  mod.rs  projects.rs  regex.rs  state.rs  ui.rs
src/app/structs/: category.rs  config.rs  gitconfig.rs  jobs.rs  mod.rs  projects.rs  todos.rs  tree.rs  windows.rs
src/app/ui/: mod.rs
src/app/ui/base/: mod.rs
src/app/ui/popup/: mod.rs
src/handler/: base.rs  mod.rs  popup.rs  todo.rs
src/inout/: handler.rs
src/inputs/: events.rs
src/io/: handler.rs
src/json/: category.rs  mod.rs  project.rs  todo.rs
src/old/v1/: viewer.rs
src/other/: initialize.rs  mod.rs  projects.db  request.rs  sql.rs  structs.rs  viewer.rs
src/recycling/: newer_viewer.rs  request.rs  viewer.rs  viewer_bak.rs
src/recycling/other/: initialize.rs  mod.rs  structs.rs  viewer.rs
src/refactor/: mod.rs  new_lib.rs  new_sql.rs  new_viewer.rs
src/sql/: category.rs  mod.rs  project.rs  tmp_config.rs  todo.rs
src/v1/: code.rs  config.rs  sql.rs
