[package]
name = "wyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
crossterm = { version = "0.26.1", features = [ "serde" ] }
shellexpand = "2.1.0"
git2 = "0.16.1"
glob = "0.3.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }
tui = { version = "0.19", default-features = false, features = ['crossterm', 'serde']}
tui-textarea = "0.2"
strum = "0.24"
strum_macros = "0.24"
walkdir = "2.3.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
futures = "0.3"
dirs = "4.0"
iso8601 = "0.6.1"
rust-ini = "0.18.0"
tui-tree-widget = "0.11.0"
const_format = "0.2.30"
throbber-widgets-tui = "0.1.3"
ratatui = "0.20.1"
eyre = "0.6.8"
tui-input = "0.7.0"
